Update: change to papercss

--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <title>Yudha Subki</title>
     <script src="https://kit.fontawesome.com/db1a3593c0.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/vendors/papercss/paper.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
-<body class="bg-black">
-    <section class="row">
-        <div class="content row">
-            <div class="title mb-2 text-center text-white">
-                <p class="title-name">Yudha Pratama Putra</p>
-                <p class="title-role">Software Engineer</p>
+<body>
+    <section class="centered-elements">
+        <div class="flex-center">
+            <div>
+                <h3 class="text-center">Yudha Pratama Putra</h3>
             </div>
-            <div class="icon column text-center text-white">
-                <a class="text-white" href="https://github.com/yudhasubki""><span><i class="fab fa-github fa-2x"></i></span></a>
-                <a class="text-white" href="https://linkedin.com/in/yudhasubki"><span><i class="fab fa-linkedin-in fa-2x"></i></span></a>
-                <a class="text-white" href="https://instagram.com/yudhasubki"><span><i class="fab fa-instagram fa-2x"></i></span></a>
-            </div>
+            <p class="text-center">Software Engineer</p>
         </div>
-        
+        <div class="row flex-center padding-left-large">
+            <a href="https://github.com/yudhasubki" target="_blank"  class="paper-btn">@Github</a>
+            <a href="https://linkedin.com/in/yudhasubki" target="_blank"  class="paper-btn">@LinkedIn</a>
+            <a href="mailto:yudhasubki@gmail.com" target="_blank" class="paper-btn">@Email</a>
+        </div>
     </section>
 </body>
 </html>
