Update: change row to text-center

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <p class="text-center">Software Engineer</p>
         </div>
-        <div class="row flex-center padding-left-large">
+        <div class="flex-center text-center">
             <a href="https://github.com/yudhasubki" target="_blank"  class="paper-btn">@Github</a>
             <a href="https://linkedin.com/in/yudhasubki" target="_blank"  class="paper-btn">@LinkedIn</a>
             <a href="mailto:yudhasubki@gmail.com" target="_blank" class="paper-btn">@Email</a>
